--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul class="nav-links">
       <li><a href="#menu">Menu</a></li>
       <li><a href="#queue">Queue</a></li>
-      <li><a href="#admin-panel" class="btn-primary">Admin</a></li>
+      <li><a href="#admin-panel" class="btn-primary" style="color:white">Admin</a></li>
     </ul>
   </nav>
 
@@ -80,3 +80,4 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
