--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <!-- Navbar -->
+  <!-- Navigation bar -->
   <nav>
     <div class="logo">Smart Canteen</div>
     <ul class="nav-links">
@@ -80,3 +80,4 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
